remove z-index (was a leaflet issue)

--- a/styles/viewer.css
+++ b/styles/viewer.css
@@ -31,7 +31,6 @@ h2 a {
   right: 0px;
   height: 55px;
   background: transparent;
-  z-index: 1000;
 }
 
 @media (max-width: 800px) {
@@ -139,7 +138,6 @@ h2 a {
   padding: 2px;
   background-color: #c33c3c;
   border-left: none;
-  z-index: 1000;
 }
 
 .curtains {
@@ -261,14 +259,9 @@ div.exit:hover {
   height: 150px;
   cursor: pointer;
   position: fixed;
-  z-index: 1001;
+  z-index: 1;
   left: 15px;
   top: 55px;
-}
-
-#expanded {
-  z-index: 1000;
-  position: absolute;  /* needed for z-index to do something */
 }
 
 #expanded .og-fullimg img:hover {
@@ -337,7 +330,6 @@ a#slideshow-all:visited {
   right: 10px;
   background: #eee;
   padding: 0 10px;
-  z-index: 1000;
 }
 
 #popular {
@@ -623,7 +615,6 @@ a#slideshow-all:visited {
   text-align: center;
   line-height: 54px;
   cursor: pointer;
-  z-index: 1000;
 }
 
 #time-range {
@@ -637,7 +628,6 @@ a#slideshow-all:visited {
   display: none;
   box-sizing: border-box;
   padding-top: 15px;
-  z-index: 1000;
 }
 
 #time-range-summary {
@@ -699,12 +689,6 @@ span.ui-slider-handle.ui-corner-all.ui-state-default {
 .og-grid li.selected > a:first-child img,
 .og-grid li.sibling > a:first-child img {
   box-shadow: 0 0 0 2px #fff;
-}
-
-.leaflet-top {
-  /* TODO: move this into an imported CSS file after leaflet.css */
-  /* shove zoom controls below OldNYC logo */
-  top: 64px !important;
 }
 
 .invisible {
